k8s/immich-public-proxy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-public-proxy
  namespace: immich
spec:
  selector:
    matchLabels:
      app: immich-public-proxy
  template:
    metadata:
      labels:
        app: immich-public-proxy
    spec:
      containers:
      - name: immich-public-proxy
        image: alangrainger/immich-public-proxy:latest
        ports:
        - containerPort: 3000
