k8s/immich-public-proxy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-public-proxy
  namespace: immich
spec:
  selector:
    app: immich-public-proxy
  ports:
  - name: http
    port: 80
    targetPort: 3000
