k8s/immich-public-proxy/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich-public-proxy
  namespace: immich 
spec:
  entryPoints: [https]
  routes:
  - kind: Rule
    match: Host(`photos.pycrs.cz`) 
    services:
    - kind: Service
      name: immich-public-proxy
      port: http
  tls: {}
